[gd_scene load_steps=14 format=3 uid="uid://dj136bdaa60bt"]

[ext_resource type="Script" uid="uid://dci3q07wnp48c" path="res://src/ui/touchscreen/touchscreen_editor.gd" id="1_5apvd"]
[ext_resource type="PackedScene" uid="uid://c42cse2ovr2tk" path="res://src/ui/touchscreen/touch_button_editor.tscn" id="2_x0fk3"]
[ext_resource type="Script" uid="uid://dwxn4yuphwvyq" path="res://src/ui/touchscreen/dot.gd" id="3_0e1f7"]
[ext_resource type="Texture2D" uid="uid://dprcyur28algn" path="res://asset/texture/ui/touchscreen/jump.webp" id="4_n1xso"]
[ext_resource type="Texture2D" uid="uid://ld0ldun20kbn" path="res://asset/texture/ui/touchscreen/attack.webp" id="4_rng2v"]
[ext_resource type="Texture2D" uid="uid://cxwcmamb1gjpt" path="res://asset/texture/ui/touchscreen/dash.webp" id="6_06mbg"]
[ext_resource type="Texture2D" uid="uid://b7k1g4s2p6ue8" path="res://asset/texture/ui/touchscreen/heal.webp" id="7_v7met"]
[ext_resource type="Texture2D" uid="uid://nwfq0ns5i0fg" path="res://asset/texture/ui/touchscreen/interact.webp" id="8_5rv7b"]
[ext_resource type="Texture2D" uid="uid://bdny0681r45wj" path="res://asset/texture/ui/touchscreen/shoot.webp" id="8_25pa3"]
[ext_resource type="Texture2D" uid="uid://cqneg23evmwko" path="res://asset/texture/ui/touchscreen/inventory.webp" id="9_8gtjh"]
[ext_resource type="Texture2D" uid="uid://d4b8h2vy8r33l" path="res://asset/texture/ui/touchscreen/throw.webp" id="9_djwmu"]
[ext_resource type="Texture2D" uid="uid://y3y6fbs8r666" path="res://asset/texture/ui/touchscreen/menu.webp" id="10_em5h0"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_djwmu"]

[node name="TouchscreenEditor" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
script = ExtResource("1_5apvd")

[node name="JoyStick" type="Control" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0

[node name="Joystick" parent="JoyStick" instance=ExtResource("2_x0fk3")]
position = Vector2(48, -48)
action_name = &"move"
radius = 32.0
image = SubResource("PlaceholderTexture2D_djwmu")

[node name="Dot" type="Node2D" parent="JoyStick/Joystick"]
script = ExtResource("3_0e1f7")

[node name="Action" type="Control" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0

[node name="Attack" parent="Action" instance=ExtResource("2_x0fk3")]
position = Vector2(-56, -56)
action_name = &"attack"
radius = 16.0
image = ExtResource("4_rng2v")

[node name="Dash" parent="Action" instance=ExtResource("2_x0fk3")]
position = Vector2(-64, -24)
action_name = &"dash"
radius = 12.0
image = ExtResource("6_06mbg")

[node name="Heal" parent="Action" instance=ExtResource("2_x0fk3")]
position = Vector2(-104, -16)
action_name = &"heal"
radius = 12.0
image = ExtResource("7_v7met")

[node name="Jump" parent="Action" instance=ExtResource("2_x0fk3")]
position = Vector2(-32, -32)
action_name = &"jump"
radius = 16.0
image = ExtResource("4_n1xso")

[node name="Shoot" parent="Action" instance=ExtResource("2_x0fk3")]
position = Vector2(-24, -64)
action_name = &"shoot"
radius = 12.0
image = ExtResource("8_25pa3")

[node name="Throw" parent="Action" instance=ExtResource("2_x0fk3")]
position = Vector2(-88, -40)
action_name = &"throw"
radius = 12.0
image = ExtResource("9_djwmu")

[node name="Menu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0

[node name="Interact" parent="Menu" instance=ExtResource("2_x0fk3")]
position = Vector2(-16, 64)
action_name = &"interact"
image = ExtResource("8_5rv7b")

[node name="Inventory" parent="Menu" instance=ExtResource("2_x0fk3")]
position = Vector2(-16, 40)
action_name = &"inventory"
image = ExtResource("9_8gtjh")

[node name="Menu" parent="Menu" instance=ExtResource("2_x0fk3")]
position = Vector2(-16, 16)
action_name = &"menu"
image = ExtResource("10_em5h0")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
offset_right = 16.0
offset_bottom = 16.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="OptionContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/OptionContainer"]
layout_mode = 2

[node name="ExitButton" type="Button" parent="PanelContainer/HBoxContainer/OptionContainer/HBoxContainer"]
layout_mode = 2
text = "×"

[node name="ResetButton" type="Button" parent="PanelContainer/HBoxContainer/OptionContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "SET_KEY_RESET"

[node name="ActionLabel" type="Label" parent="PanelContainer/HBoxContainer/OptionContainer"]
layout_mode = 2
size_flags_vertical = 1
horizontal_alignment = 1
vertical_alignment = 1

[node name="SizeContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/OptionContainer"]
layout_mode = 2

[node name="SizeSlider" type="HSlider" parent="PanelContainer/HBoxContainer/OptionContainer/SizeContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 8.0
max_value = 48.0
value = 24.0
tick_count = 11

[node name="SizeLabel" type="Label" parent="PanelContainer/HBoxContainer/OptionContainer/SizeContainer"]
layout_mode = 2
text = "32"

[node name="SwitchButton" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
text = "→
"

[connection signal="pressed" from="PanelContainer/HBoxContainer/OptionContainer/HBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/OptionContainer/HBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="value_changed" from="PanelContainer/HBoxContainer/OptionContainer/SizeContainer/SizeSlider" to="." method="_on_size_slider_value_changed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/SwitchButton" to="." method="_on_switch_button_pressed"]
